fix spacing

--- a/css/2015.css
+++ b/css/2015.css
@@ -340,7 +340,7 @@ code {
 ------------------------------------------------------------*/
 #work .photo, .misc {
   padding: 0;
-  margin-bottom: 1vw;
+  margin-bottom: 1.6vh;
   background: #f8f8f9;
   position: relative;
   border-radius: 6px;
